# agentic-bi-assistant

./: .gitignore  README.md  pyproject.toml
exercise/: requirements.txt
exercise/agent/: db.py  history.py  loop.py  masking.py  prompts.py  summarise.py  tools.py
exercise/api/: fingerprint.py  main.py  models.py
exercise/assets/: pii_masking.yaml
exercise/assets/catalog/: catalog.yaml  coherent.guide.md  cord19.guide.md  open_targets.guide.md  synpuf.guide.md  synthea.guide.md
exercise/frontend/: app.js  index.html  style.css
exercise/tests/eval/: benchmark.yaml  runner.py
exercise/tests/unit/: test_loop.py  test_masking.py  test_tools.py
