[project]
name = "exercise5-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent>=0.1.3",
]

[tool.pytest.ini_options]
testpaths = ["exercise/tests"]
markers = [
    "integration: requires live Azure credentials (AZURE_STORAGE_ACCOUNT_KEY)",
]
